--- a/clinica-soledispa/nbproject/project.properties
+++ b/clinica-soledispa/nbproject/project.properties
@@ -33,9 +33,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/clinica-soledispa
 excludes=
+file.reference.jaxb-api-2.3.0.jar=librerias\\jaxb-api-2.3.0.jar
+file.reference.jbcrypt-0.4.jar=librerias\\jbcrypt-0.4.jar
+file.reference.sqljdbc41.jar=librerias\\sqljdbc41.jar
+file.reference.sqljdbc42.jar=librerias\\sqljdbc42.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jbcrypt-0.4.jar}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.sqljdbc41.jar}:\
+    ${file.reference.jaxb-api-2.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +79,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=clinica-soledispa
-main.class=
+main.class=Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
