--- a/clinica-soledispa/nbproject/project.properties
+++ b/clinica-soledispa/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=clinica-soledispa
+application.vendor=ROBLES MORALES
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,18 +33,19 @@ dist.jar=${dist.dir}/clinica-soledispa.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/clinica-soledispa
+endorsed.classpath=
 excludes=
 file.reference.jaxb-api-2.3.0.jar=librerias\\jaxb-api-2.3.0.jar
 file.reference.jbcrypt-0.4.jar=librerias\\jbcrypt-0.4.jar
+file.reference.jcalendar-1.4.jar=librerias/jcalendar-1.4.jar
 file.reference.sqljdbc41.jar=librerias\\sqljdbc41.jar
-file.reference.sqljdbc42.jar=librerias\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jbcrypt-0.4.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
     ${file.reference.sqljdbc41.jar}:\
-    ${file.reference.jaxb-api-2.3.0.jar}
+    ${file.reference.jaxb-api-2.3.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
